fix broken icon font spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2213,30 +2213,7 @@ p {
 	position: relative;
 	z-index: 10;
 }
-.blog-area::before {
-	position: absolute;
-	content: '';
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 360px;
-	background-image: url(../images/bg-shape.png);
-	background-size: cover;
-	z-index: -1;
-	opacity: 0.6;
-}
-.blog-area::after {
-	position: absolute;
-	content: '';
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	height: 360px;
-	background-image: url(../images/bg-shape-2.png);
-	background-size: cover;
-	z-index: -1;
-	opacity: 0.6;
-}
+
 .blog-area .blog-thumb img {
 	width: 100%;
 	-webkit-box-shadow: 0px 10px 30px 0px rgba(71, 75, 76, 0.2);
